Fix appearance of query title input
The input still had an outline property, which made it look weird when
it had focus.

--- a/src/components/UI/StartNewQuery/StartNewQuery.module.scss
+++ b/src/components/UI/StartNewQuery/StartNewQuery.module.scss
@@ -37,6 +37,7 @@
     padding: 5px;
     border-radius: 5px;
     border: 0;
+    outline: none;
 }
 
 .queryTitle::placeholder {
